Add weather icons change current weather style to increase icon visibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,8 @@ body {
 #today {
     border: 1px solid black;
     padding: 10px;
+    background-color: #3a7bc8;
+    color: white;
 }
 
 .forecast-container {
