Remove dummy HTML elements clear some initial HTML elements for cleaner first look fix logic for not exceeding 10 history buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,9 +32,9 @@ body {
 }
 
 #today {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     padding: 10px;
-    background-color: #3a7bc8;
+    /* background-color: #3a7bc8; */
     color: white;
 }
 
